@@ -5,7 +5,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.cryptomator</groupId>
 	<artifactId>integrations-linux</artifactId>
-	<version>1.2.1</version>
+	<version>1.3.0</version>
 
 	<name>integrations-linux</name>
 	<description>Provides optional Linux services used by Cryptomator</description>
@@ -36,21 +36,23 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<project.jdk.version>19</project.jdk.version>
+		<project.jdk.version>20</project.jdk.version>
 
 		<!-- runtime dependencies -->
 
-		<api.version>1.2.0</api.version>
+		<api.version>1.3.0</api.version>
 		<secret-service.version>1.8.1-jdk17</secret-service.version>
-		<kdewallet.version>1.2.8</kdewallet.version>
-		<guava.version>31.1-jre</guava.version>
+		<kdewallet.version>1.3.2</kdewallet.version>
+		<appindicator.version>1.3.4</appindicator.version>
+		<guava.version>32.0.0-jre</guava.version>
 		<slf4j.version>1.7.36</slf4j.version>
+		<commons-lang3.version>3.12.0</commons-lang3.version>
 
 		<!-- test dependencies -->
 		<junit.version>5.8.2</junit.version>
 
 		<!-- build plugin dependencies -->
-		<dependency-check.version>8.1.0</dependency-check.version>
+		<dependency-check.version>8.2.1</dependency-check.version>
 		<nexus-staging.version>1.6.8</nexus-staging.version>
 	</properties>
 
@@ -80,6 +82,18 @@
 			<artifactId>kdewallet</artifactId>
 			<version>${kdewallet.version}</version>
 		</dependency>
+		<!-- Apache Commons -->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>${commons-lang3.version}</version>
+		</dependency>
+		<!-- Java bindings for appindicator -->
+		<dependency>
+			<groupId>org.purejava</groupId>
+			<artifactId>libappindicator-gtk3-java-minimal</artifactId>
+			<version>${appindicator.version}</version>
+		</dependency>
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter</artifactId>
@@ -96,6 +110,9 @@
 				<version>3.9.0</version>
 				<configuration>
 					<release>${project.jdk.version}</release>
+					<compilerArgs>
+						<arg>--enable-preview</arg>
+					</compilerArgs>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -190,6 +207,7 @@
 							<name>see</name>
 						</tag>
 					</tags>
+					<additionalOptions>--enable-preview</additionalOptions>
 				</configuration>
 			</plugin>
 		</plugins>
